--- a/app/templates/vendorDash.html
+++ b/app/templates/vendorDash.html
@@ -106,10 +106,35 @@
         font-size: 1.2em;
         margin-top: 20px;
     }
+
+    .vendor-info {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .vendor-info img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 15px;
+    }
+
+    .vendor-info p {
+        margin: 0;
+        font-size: 1.2em;
+        font-weight: bold;
+        color: #333; /* Black text */
+    }
 </style>
 
 <div class="vendor-dashboard">
-    <p>Signed in as: {{ vendor_name }}</p>
+    <div class="vendor-info">
+        {% if vendor_logo %}
+        <img src="{{ vendor_logo }}" alt="Vendor Logo">
+        {% endif %}
+        <p>Signed in as: {{ vendor_storename }}</p>
+    </div>
 
     <div class="revenue">
         Total Revenue: ${{ total_revenue }}
