--- a/app/templates/vendorDash.html
+++ b/app/templates/vendorDash.html
@@ -18,6 +18,25 @@
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
+    .vendor-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    .vendor-header img {
+        width: 80px;
+        height: 80px;
+        margin-right: 15px;
+    }
+
+    .vendor-header h1 {
+        font-size: 2em;
+        color: #333; /* Black text */
+        margin: 0;
+    }
+
     h2 {
         color: #ff6600; /* Orange text */
         margin-bottom: 15px;
@@ -106,34 +125,14 @@
         font-size: 1.2em;
         margin-top: 20px;
     }
-
-    .vendor-info {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-
-    .vendor-info img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        margin-right: 15px;
-    }
-
-    .vendor-info p {
-        margin: 0;
-        font-size: 1.2em;
-        font-weight: bold;
-        color: #333; /* Black text */
-    }
 </style>
 
 <div class="vendor-dashboard">
-    <div class="vendor-info">
+    <div class="vendor-header">
         {% if vendor_logo %}
         <img src="{{ vendor_logo }}" alt="Vendor Logo">
         {% endif %}
-        <p>Signed in as: {{ vendor_storename }}</p>
+        <h1>Signed in as: {{ vendor_name }}</h1>
     </div>
 
     <div class="revenue">
